--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,7 +13,22 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  global:
+    
+
 jobs:
+  build: 
+    environment:
+      CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
+    steps:
+      - run:
+          name: Setup Code Climate test-reporter
+          command: |
+          # download test reporter as a static binary
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+
   test:
 
     runs-on: ubuntu-latest
@@ -27,7 +42,5 @@ jobs:
     # uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
     - name: Install dependencies
       run: bundle install
-#   The below fails presumably because it currently can't find a Rakefile, so
-#   temporarily commenting it out until the file is merged with the rest of the files
-#    - name: Run tests
-#      run: bundle exec rake
+   - name: Run tests
+     run: bundle exec rspec
