add runs-on property for environment

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   build: 
+    runs-on: ubuntu-latest
     environment:
       CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
     steps:
