--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,11 +18,11 @@ jobs:
     runs-on: ubuntu-latest
     # environment:
     #   CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
-    # steps:
-    #   - name: Setup Code Climate test-reporter
-    #     run: |
-    #       curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    #       chmod +x ./cc-test-reporter
+    steps:
+      - name: Setup Code Climate test-reporter
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
 
   test:
 
