move global property

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,11 +13,15 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  global:
+    - CC_TEST_REPORTER_ID=cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
+
 jobs:
   build: 
     runs-on: ubuntu-latest
-    environment:
-      CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
+    # environment:
+    #   CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
     steps:
       - name: Setup Code Climate test-reporter
         run: |
