--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -39,7 +39,7 @@ jobs:
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
       uses: ruby/setup-ruby@v1
     # uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
-    # - name: Install dependencies
-    #   run: bundle install
-    #  - name: Run tests
-    #   run: bundle exec rspec 
+    - name: Install dependencies
+      run: bundle install
+     - name: Run tests
+      run: bundle exec rspec 
