--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,61 +1,45 @@
-# # This workflow uses actions that are not certified by GitHub.
-# # They are provided by a third-party and are governed by
-# # separate terms of service, privacy policy, and support
-# # documentation.
-# # This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
+# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
-# name: Ruby
+name: Ruby
 
-# on:
-#   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
-# # env:
-# #   global:
-# #     - CC_TEST_REPORTER_ID=cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
+# env:
+#   global:
+#     - CC_TEST_REPORTER_ID=cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
 
-# jobs:
-#   build: 
-#     runs-on: ubuntu-latest
-#     # environment:
-#     #   CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
-#     steps:
-#       - name: Setup Code Climate test-reporter
-#         run: |
-#           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-#           chmod +x ./cc-test-reporter
+jobs:
+  build: 
+    runs-on: ubuntu-latest
+    # environment:
+    #   CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
+    steps:
+      - name: Setup Code Climate test-reporter
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
 
-#   test:
+  test:
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up Ruby
-#     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-#     # change this to (see https://github.com/ruby/setup-ruby#versioning):
-#       uses: ruby/setup-ruby@v1
-#     # uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
-#     - name: Install dependencies
-#       run: bundle install
-#      - name: Run tests
-#       run: bundle exec rspec 
-
-language: ruby
-rvm:
-- 2.6.5
-env:
-  global:
-  - CC_TEST_REPORTER_ID=cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
-services:
-- postgresql
-before_script:
-- bundle exec rails db:create
-- bundle exec rails db:migrate
-- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
-  > ./cc-test-reporter
-- chmod +x ./cc-test-reporter
-- "./cc-test-reporter before-build"
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Ruby
+    # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
+    # change this to (see https://github.com/ruby/setup-ruby#versioning):
+      uses: ruby/setup-ruby@v1
+    # uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+    - name: Install dependencies
+      run: bundle install
+     - name: Run tests
+      run: bundle exec rspec 
