--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,10 +13,6 @@ on:
   pull_request:
     branches: [ master ]
 
-# env:
-#   global:
-#     - CC_TEST_REPORTER_ID=cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
-
 jobs:
   build: 
     runs-on: ubuntu-latest
@@ -41,5 +37,5 @@ jobs:
     # uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
     - name: Install dependencies
       run: bundle install
-     - name: Run tests
-      run: bundle exec rspec 
+    #  - name: Run tests
+    #   run: bundle exec rspec 
