--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,15 +14,6 @@ on:
     branches: [ master ]
 
 jobs:
-  build: 
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Code Climate test-reporter
-        env:
-          CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
-        run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-          chmod +x ./cc-test-reporter
 
   test:
 
@@ -36,7 +27,12 @@ jobs:
         uses: ruby/setup-ruby@v1
       # uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
       - name: Install dependencies
-        run: |
-          bundle install
-          rails db:setup db:migrate
-          bundle exec rspec
+        run: bundle install
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.6.0
+        env:
+          CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
+        with:
+          coverageCommand: bundle exec rspec
+          debug: true
+          
