--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: bundle install
       - name: Prepare database
-        run: bundle exec rails db:create db:migrate
+        run: bundle exec rails db:create db:migrate RAILS_ENV=test
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v2.6.0
         env:
