--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,24 @@
+version: "2"
+
 plugins:
+  brakeman:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+        - javascript
+        - ruby
+    exclude_patterns:
+      - spec/
+  reek:
+    enabled: true
   rubocop:
     enabled: true
     channel: rubocop-0-83
+
+  exclude_patterns:
+    - db/
+    - node_modules/
+    - tmp/
+    - vendor/
