--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ require:
 AllCops:
   NewCops: enable
   Exclude:
+    - bin/bundle
     - db/schema.rb
     - db/migrate/*.rb
     - node_modules/**/*
