--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -18,6 +18,7 @@ plugins:
     channel: rubocop-0-83
 
 exclude_patterns:
+  - "app/**/application*"
   - "bin/bundle"
   - "db/"
   - "node_modules/"
