Add postgres service to pipeline

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,6 +18,11 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12.3
+        ports:
+          - 5432:5432
 
     steps:
       - uses: actions/checkout@v2
