Cache Bundled Gems in GH Actions, Fixes #25 (#27)
* Cache bundled gems to reduce build times

* Add random newline for an empty commit

* Remove newline after cached build was success

* Reimplement step to prepare DB for testing

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -33,8 +33,18 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
 
-      - name: Install dependencies
-        run: bundle install
+      - uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: bundle-use-ruby-ubuntu-latest-${{ hashFiles('.ruby-version') }}-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            bundle-use-ruby-ubuntu-latest-${{ hashFiles('.ruby-version') }}-
+
+      - name: bundle install
+        run: |
+          bundle config deployment true
+          bundle config path vendor/bundle
+          bundle install --jobs 4
 
       - name: Prepare database
         env:
