--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,23 +28,33 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout application code
+        uses: actions/checkout@v2
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
 
-      - uses: actions/cache@v1
+      - name: Utilise Ruby gem cache
+        uses: actions/cache@v1
         with:
           path: vendor/bundle
           key: bundle-use-ruby-ubuntu-latest-${{ hashFiles('.ruby-version') }}-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             bundle-use-ruby-ubuntu-latest-${{ hashFiles('.ruby-version') }}-
 
-      - name: bundle install
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 11.13.0
+
+      - name: Install ruby dependencies
         run: |
           bundle config deployment true
           bundle config path vendor/bundle
           bundle install --jobs 4
+
+      - name: Install node dependencies
+        run: yarn install
 
       - name: Prepare database
         env:
