--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -47,6 +47,19 @@ jobs:
         with:
           node-version: 11.13.0
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Utilise yarn cache
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ubuntu-latest-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ubuntu-latest-yarn-
+
       - name: Install ruby dependencies
         run: |
           bundle config deployment true
