--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -82,6 +82,8 @@ jobs:
 
   deploy:
 
+    runs-on: ubuntu-latest
+
     needs: test
 
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
