--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -5,7 +5,7 @@
 # This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
 # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
-name: Ruby
+name: Test and Deploy
 
 on:
   push:
@@ -79,3 +79,22 @@ jobs:
           CC_TEST_REPORTER_ID: cfdd9af6baaca2b415c1893bc196c4527f4c73d1070441b08abde31a72f7188f
         with:
           coverageCommand: bundle exec rspec
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    needs: test
+
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Checkout application code
+        uses: actions/checkout@v2
+
+      - name: Deploy to Dokku
+        uses: vitalyliber/dokku-github-action@v5.0
+        env:
+          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          HOST: learning-journal.stivaros.com
+          PROJECT: learning-journal
