--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -12,27 +12,28 @@ plugins:
     exclude_patterns:
       - spec/
   reek:
-    directories:
-      "app/controllers":
-        IrresponsibleModule:
-          enabled: false
-        NestedIterators:
-          max_allowed_nesting: 2
-        UnusedPrivateMethod:
-          enabled: false
-        InstanceVariableAssumption:
-          enabled: false
-      "app/helpers":
-        IrresponsibleModule:
-          enabled: false
-        UtilityFunction:
-          enabled: false
-      "app/mailers":
-        InstanceVariableAssumption:
-          enabled: false
-      "app/models":
-        InstanceVariableAssumption:
-          enabled: false
+    enabled: true
+      directories:
+        "app/controllers":
+          IrresponsibleModule:
+            enabled: false
+          NestedIterators:
+            max_allowed_nesting: 2
+          UnusedPrivateMethod:
+            enabled: false
+          InstanceVariableAssumption:
+            enabled: false
+        "app/helpers":
+          IrresponsibleModule:
+            enabled: false
+          UtilityFunction:
+            enabled: false
+        "app/mailers":
+          InstanceVariableAssumption:
+            enabled: false
+        "app/models":
+          InstanceVariableAssumption:
+            enabled: false
   rubocop:
     enabled: true
     channel: rubocop-0-83
