remove checks line and add directores in cc yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,7 +13,7 @@ plugins:
       - spec/
   reek:
     enabled: true
-    checks:
+    directories:
       "app/controllers":
         IrresponsibleModule:
           enabled: false
