exclude spec/models from blocklength check

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -16,6 +16,11 @@ plugins:
   rubocop:
     enabled: true
     channel: rubocop-0-83
+    checks:
+      Rubocop/Metrics/BlockLength:
+        enabled: true
+        exclude_patterns:
+        - 'spec/models/'
 
 exclude_patterns:
   - "app/**/application*"
