--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -18,7 +18,7 @@ plugins:
     channel: rubocop-0-83
     checks:
       Rubocop/Metrics/BlockLength:
-        enabled: true
+        enabled: false
         exclude_patterns:
         - 'spec/models/'
 
