--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,3 +9,8 @@ AllCops:
     - db/schema.rb
     - db/migrate/*.rb
     - node_modules/**/*
+
+Metrics/BlockLength:
+  Enabled: true
+  Exclude: 
+    - spec/**/*
